// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components >> button  Disabled button Should render basic button correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#CBCBCB",
      "borderRadius": 8,
      "opacity": 1,
      "padding": 16,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#282828",
          "display": "flex",
          "fontFamily": "SFUIText-Semibold",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    TEST BUTTON
  </Text>
</View>
`;

exports[`components >> button  Enabled button Should render basic button correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#67B6A8",
      "borderRadius": 8,
      "opacity": 1,
      "padding": 16,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#282828",
          "display": "flex",
          "fontFamily": "SFUIText-Semibold",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    TEST BUTTON
  </Text>
</View>
`;

exports[`components >> button  Loading button Should render button in loading state 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#67B6A8",
      "borderRadius": 8,
      "opacity": 1,
      "padding": 16,
      "width": "100%",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="white"
    hidesWhenStopped={true}
    size="small"
    style={
      Array [
        Object {},
      ]
    }
    testID="QBYQCQ-button-spinner"
  />
</View>
`;
